# connections

./: .gitignore  .gitlab-ci.yml  .gitleaks.toml  .pii-allow  .travis.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  Cargo.toml  ChangeLog.md  EXAMPLES.md  LICENSE  LICENSE-MIT  README.md  connections.cabal  deny.toml  proptest.toml  rust-toolchain.toml  stack.yaml
.claude/: settings.json
.claude/commands/: pr-reply.md  pr-report.md  pr-review.md  pr-watch.md  pull-reviews.md  reply-reviews.md  sprint-review.md  watch-mr.md
.claude/skills/: sprint-review.md
.config/: nextest.toml
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS  pull_request_template.md
.github/instructions/: docs-review.instructions.md
.github/workflows/: ci.yml  doc-nightly.yml  kani.yml  pages.yml
.gitlab/merge_request_templates/: default.md
doc/: design.md  workflow.md
doc/audits/: README.md  coverage.md  docrot.md  hygiene.md  pii.md  proptest.md
doc/notes/: note-2026-04-27-01.md  note-2026-04-27-02.md  note-2026-04-27-03.md
doc/plans/: plan-2026-04-14-01.md  plan-2026-04-23-01.md  plan-2026-04-23-02.md  plan-2026-04-23-03.md  plan-2026-04-23-04.md  plan-2026-04-23-05.md  plan-2026-04-24-01.md  plan-2026-04-24-02.md  plan-2026-04-25-01.md  plan-2026-04-26-01.md  plan-2026-04-26-02.md  plan-2026-04-26-04.md  plan-2026-04-26-05.md  plan-2026-04-26-06.md  plan-2026-04-26-07.md  plan-2026-04-26-08.md  plan-2026-04-26-09.md  plan-2026-04-26-10.md  plan-2026-04-26-11.md  plan-2026-04-26-12.md  plan-2026-04-27-01.md  plan-2026-04-27-02.md  plan-2026-04-27-03.md  plan-2026-04-27-04.md  plan-2026-04-27-05.md  plan-2026-04-27-06.md  plan-2026-04-27-07.md  plan-2026-04-27-08.md  plan-2026-04-27-09.md  plan-2026-04-27-10.md  plan-2026-04-27-11.md  plan-2026-04-27-12.md  plan-2026-04-28-01.md  plan-2026-04-28-02.md  plan-2026-04-28-03.md  plan-2026-04-28-04.md  plan-2026-04-28-05.md  plan-2026-04-28-06.md  plan-2026-04-28-07.md  plan-2026-04-29-01.md  (+41 more)
doc/reviews/: review-00000.md  review-00001.md  review-00002.md  review-00003.md  review-00004.md  review-00005.md  review-00006.md  review-00007.md  review-00008.md  review-00009.md  review-00010.md  review-00011.md  review-00013.md  review-00014.md  review-00016.md  review-00017.md  review-00018.md  review-00019.md  review-00020.md  review-00021.md  review-00022.md  review-00023.md  review-00024.md  review-00026.md  review-00027.md  review-00028.md  review-00030.md  review-00031.md  review-00032.md  review-00034.md  review-00035.md  review-00036.md  review-00037.md  review-00038.md  review-00039.md  review-00040.md  review-00041.md  review-00042.md  review-00043.md  review-00044.md  (+30 more)
scripts/: _glab.py  audit.py  audit_report.sh  audit_run.py  audit_state.sh  autosquash.sh  check-pii.sh  check_no_ext_ext_conn.sh  check_pii.sh  check_readme_mirror.sh  ci-select-tests.sh  claude_review.py  extract_mr_body.sh  git_autosquash_finalize.sh  git_merge.sh  git_squash.sh  github_client.py  next_mr_number.sh  pr_reply.py  pr_report.py  pr_request.sh  pr_review.sh  pull_reviews.py  readme_mirrors.txt  reply_review.py  review_path.sh  template_sync.sh  workflow_state.sh
src/: addr.rs  byte.rs  char.rs  conn.rs  core.rs  extended.rs  fixed.rs  float.rs  float_ext.rs  hifi.rs  int.rs  interval.rs  kani.rs  kani_proofs.rs  lattice.rs  lib.rs  order.rs  prop.rs  property.rs  sample.rs  time.rs  uhlc.rs
src/Data/: Connection.hs  Dioid.hs  Float.hs  Float.hsc  Lattice.hs  Order.hs  Prd.hs  Semilattice.hs
src/Numeric/: Prelude.hs
src/addr/: ip.rs  socket.rs
src/byte/: eight.rs  four.rs  one.rs  sixteen.rs  two.rs
src/conn/: cast.rs  fixed.rs  float.rs  int.rs  mod.rs  sample.rs  std.rs  time.rs  uint.rs  word.rs
src/core/: bool.rs  char.rs  f016.rs  f032.rs  f064.rs  i008.rs  i016.rs  i032.rs  i064.rs  i128.rs  isize.rs  size.rs  u008.rs  u016.rs  u032.rs  u064.rs  u128.rs  usize.rs
src/fixed/: i008.rs  i016.rs  i032.rs  i064.rs  i128.rs  i16.rs  i32.rs  i64.rs  i8.rs  u008.rs  u016.rs  u032.rs  u064.rs  u128.rs  u16.rs  u32.rs  u64.rs  u8.rs
src/float/: f016.rs  f032.rs  f064.rs  f16.rs  f32.rs
src/hifi/: calendar.rs  duration.rs  epoch.rs
src/int/: i128.rs  i16.rs  i32.rs  i64.rs  i8.rs  u128.rs  u16.rs  u32.rs  u64.rs  u8.rs
src/kani/: ext_int.rs  fix_fix_signed.rs  fix_fix_unsigned.rs  fixed_be_four.rs  fixed_be_one.rs  fixed_be_two.rs  fixed_le_four.rs  fixed_le_one.rs  fixed_le_two.rs  float_walk.rs  float_weaker.rs  hifi_calendar.rs  hifi_pure.rs  hifi_walk.rs  int_narrow.rs  iso_family.rs  nz_ext.rs  time_pure.rs  uhlc.rs  uint_narrow.rs  uint_sat.rs  uint_widen.rs
src/kani_proofs/: byte_four.rs  byte_one.rs  byte_two.rs  ext_int.rs  fix_fix_signed.rs  fix_fix_unsigned.rs  fixed_be_four.rs  fixed_be_one.rs  fixed_be_two.rs  fixed_le_four.rs  fixed_le_one.rs  fixed_le_two.rs  float_walk.rs  float_weaker.rs  hifi_calendar.rs  hifi_pure.rs  hifi_walk.rs  int_narrow.rs  iso_family.rs  nz_ext.rs  time_pure.rs  time_walk.rs  uint_narrow.rs  uint_sat.rs  uint_widen.rs
test/: doctest.hs  test.hs
tests/: compile_fail.rs  conn_fixed_u08_galois.rs  conn_fixed_u128_galois.rs  conn_fixed_u16_galois.rs  conn_fixed_u32_galois.rs  conn_fixed_u64_galois.rs  conn_fixed_u8_galois.rs  conn_std_i128_galois.rs  conn_std_i16_galois.rs  conn_std_i32_galois.rs  conn_std_i64_galois.rs  conn_std_i8_galois.rs  conn_std_u128_galois.rs  conn_std_u16_galois.rs  conn_std_u32_galois.rs  conn_std_u64_galois.rs  conn_std_u8_galois.rs  core.rs  fixed.rs  fixed_i128_float_q_galois.rs  fixed_i128_float_q_galois_f16.rs  fixed_i16_float_q_galois.rs  fixed_i16_float_q_galois_f16.rs  fixed_i32_float_q_galois.rs  fixed_i32_float_q_galois_f16.rs  fixed_i64_float_q_galois.rs  fixed_i64_float_q_galois_f16.rs  fixed_i8_float_q_galois.rs  fixed_i8_float_q_galois_f16.rs  fixed_nz_iso_galois.rs  fixed_u128_float_q_galois.rs  fixed_u128_float_q_galois_f16.rs  fixed_u128_galois.rs  fixed_u16_float_q_galois.rs  fixed_u16_float_q_galois_f16.rs  fixed_u16_galois.rs  fixed_u32_float_q_galois.rs  fixed_u32_float_q_galois_f16.rs  fixed_u32_galois.rs  fixed_u64_float_q_galois.rs  (+20 more)
(+200 files in other folders)
