[package]
name = "connections"
edition = "2024"
version = "0.1.0"
rust-version = "1.85"
license = "MIT"
description = "Galois connections and lattice-based numerical conversions"
repository = "https://gitlab.com/cmk/connections"
homepage = "https://gitlab.com/cmk/connections"
documentation = "https://docs.rs/connections"
readme = "README.md"
keywords = ["galois", "connection", "lattice", "fixed-point", "conversion"]
categories = ["mathematics", "encoding"]

# Trim the published archive to user-facing artifacts only. Cargo's
# default behavior ships everything not gitignored — including
# ~600KB of internal sprint plans, reviews, dev tool config, and
# Claude-agent instructions. None of that helps a downstream
# consumer; the exclude block keeps the .crate to ~src + tests +
# README + LICENSE + CHANGELOG.
exclude = [
    "/.claude",
    "/.gitlab-ci.yml",
    "/.gitleaks.toml",
    "/CLAUDE.md",
    "/CODEOWNERS",
    "/deny.toml",
    "/doc",
    "/proptest.toml",
    "/proptest-regressions",
    "/rust-toolchain.toml",
    "/rustfmt.toml",
    "/scripts",
]

[dependencies]
fixed = "1"
time = "0.3"
proptest = { version = "1", optional = true }

[dev-dependencies]
proptest = "1"

[features]
# Expose `connections::prop::arb` (proptest strategies) to
# downstream crates. The `connections::prop::laws` predicates
# are always public — they only depend on this crate's own types
# (Conn, Ple, Heyting, …) and don't need proptest at all.
testing = ["dep:proptest"]

# Enable IEEE binary16 (`f16`) support: `F016`, `F032F016`, `F064F016`,
# the f16-specific ULP machinery, and the `arb_f16` /
# `extended_float_f16` proptest strategies. Requires nightly Rust
# because `f16` is currently a nightly-only primitive
# (`#![feature(f16)]`, tracking issue #116909). Default stable
# builds skip the f16 path entirely.
f16 = []

# docs.rs builds on stable rustc by default. We can't use
# `all-features = true` because the `f16` feature activates
# `#![cfg_attr(feature = "f16", feature(f16))]` — a nightly-only
# attribute that errors on stable. Opt into `testing` only so
# `property::arb` renders. The `f16`-gated items (`F016`,
# `F032F016`, `F064F016`, `arb_f16`, `extended_float_f16`) won't
# appear in the docs.rs-rendered docs until std `f16` stabilizes.
# The `--cfg docsrs` flag activates the
# `#[cfg_attr(docsrs, doc(cfg(feature = "testing")))]` mirrors that
# surface the gating in the rendered docs.
[package.metadata.docs.rs]
features = ["testing"]
rustdoc-args = ["--cfg", "docsrs"]
