[package]
name = "connections"
edition = "2024"
version = "0.0.0"
rust-version = "1.85"
license = "MIT"
description = "Lawful numerical conversions"
repository = "https://gitlab.com/cmk/connections"
homepage = "https://cmk.gitlab.io/connections/"
documentation = "https://docs.rs/connections"
readme = "README.md"
categories = ["mathematics", "encoding"]
keywords = [
    "cast",
    "round",
    "point",
    "numeric",
    "lattice"
    ]

# Trim the published archive to user-facing artifacts only. Cargo's
# default behavior ships everything not gitignored — including
# ~600KB of internal sprint plans, reviews, dev tool config, and
# Claude-agent instructions. None of that helps a downstream
# consumer; the exclude block keeps the .crate to ~src + tests +
# README + LICENSE + CHANGELOG.
exclude = [
    "/.claude",
    "/.gitlab-ci.yml",
    "/.gitleaks.toml",
    "/CLAUDE.md",
    "/CODEOWNERS",
    "/deny.toml",
    "/doc",
    "/img",
    "/proptest.toml",
    "/proptest-regressions",
    "/rust-toolchain.toml",
    "/rustfmt.toml",
    "/scripts",
]

[dependencies]
fixed = "1"
time = { version = "0.3", optional = true }
hifitime = { version = "4.3", optional = true, default-features = false }
proptest = { version = "1", optional = true }

[dev-dependencies]
proptest = "1"
trybuild = "1"

[features]
# Expose `connections::prop::arb` (proptest strategies) to
# downstream crates. The `connections::prop::conn` and
# `connections::prop::lattice` predicates are always public — they
# only depend on this crate's own types (Conn, Ple, Heyting, …) and
# don't need proptest at all.
testing = ["dep:proptest"]

# Enable civil-calendar and time-span Conns backed by the `time` crate
# under `connections::time::*`. This is opt-in because the crate's
# core algebra, numeric, fixed-point, char, addr, and std::time
# strategy surfaces do not need the external dependency.
time = ["dep:time"]

# Enable IEEE binary16 (`f16`) support: `F016`, `F032F016`, `F064F016`,
# the f16-specific ULP machinery, and the `arb_f16` /
# `extended_float_f16` proptest strategies. Requires nightly Rust
# because `f16` is currently a nightly-only primitive
# (`#![feature(f16)]`, tracking issue #116909). Default stable
# builds skip the f16 path entirely.
f16 = []

# Enable the `hifitime` crate's nanosecond-precision `Duration` and
# `Epoch` Conns under `connections::hifi::*`. Optional because
# hifitime adds ~200 KB compiled and is only useful for
# scientific / aerospace / GNSS time work — the always-on `time`
# crate covers civil-calendar use. We pull hifitime with
# `default-features = false` to keep the dep tree minimal (no
# serde, no web-time, no snafu); downstream crates that want those
# can re-enable the corresponding hifitime features themselves.
hifi = ["dep:hifitime"]

# Re-export the crate's internal codegen macros under
# `connections::macros` for downstream crates building their own
# bounded-integer / Q-format / NonZero / iso lattices on top of
# this crate. Adds no new code (the macros already exist as
# `pub(crate)`); just lifts visibility. See `src/macros.rs`.
macros = []

# docs.rs builds on stable rustc by default. We can't use
# `all-features = true` because the `f16` feature activates
# `#![cfg_attr(feature = "f16", feature(f16))]` — a nightly-only
# attribute that errors on stable. Opt into `testing` and `macros`
# (both stable-rustc-compatible). The `f16`-gated items (`F016`,
# `F032F016`, `F064F016`, `arb_f16`, `extended_float_f16`) won't
# appear in the docs.rs-rendered docs until std `f16` stabilizes.
# The `--cfg docsrs` flag activates the
# `#[cfg_attr(docsrs, doc(cfg(feature = "testing")))]` mirrors that
# surface the gating in the rendered docs.
[package.metadata.docs.rs]
features = ["testing", "macros", "time"]
rustdoc-args = ["--cfg", "docsrs"]

# Declare `cfg(kani)` so `cargo build` / `cargo test` don't warn about
# the SMT-proof harnesses gated on it. Kani sets `--cfg kani` itself
# when running `cargo kani`; this entry just teaches the check-cfg
# lint to expect it.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(kani)"] }
