[package]
name = "connections"
edition = "2024"
version = "0.1.0"
rust-version = "1.88"
license = "MIT"
description = "Galois connections as first-class values: lawful numeric casts, Q-format / IEEE / time ladders"
repository = "https://github.com/cmk/connections"
homepage = "https://cmk.github.io/connections/"
documentation = "https://docs.rs/connections"
readme = "README.md"
categories = ["mathematics", "encoding"]
keywords = [
    "cast",
    "galois",
    "fixed-point",
    "numeric",
    "lattice"
    ]

# Trim the published archive to user-facing artifacts only. Cargo's
# default behavior ships everything not gitignored — including
# ~600KB of internal sprint plans, reviews, dev tool config, and
# Claude-agent instructions. None of that helps a downstream
# consumer; the exclude block keeps the .crate to ~src + tests +
# README + LICENSE + CHANGELOG.
exclude = [
    "/.claude",
    "/.github",
    "/.githooks",
    "/.gitlab-ci.yml",
    "/.gitleaks.toml",
    "/.pii-allow",
    "/AGENTS.md",
    "/CLAUDE.md",
    "/deny.toml",
    "/doc",
    "/img",
    "/proptest.toml",
    "/proptest-regressions/",
    "/rust-toolchain.toml",
    "/rustfmt.toml",
    "/scripts",
]

[dependencies]
fixed = { version = "1", optional = true }
time = { version = ">=0.3.47, <0.4", optional = true, default-features = false }
hifitime = { version = "4.3", optional = true, default-features = false }
proptest = { version = "1", optional = true }
uhlc = { version = ">=0.9.0, <0.10", optional = true, default-features = false }

[dev-dependencies]
proptest = "1"
trybuild = "1"

[features]
fixed = ["dep:fixed"]

# Expose `connections::prop::arb` (proptest strategies) to
# downstream crates. The `connections::prop::conn` and
# `connections::prop::lattice` predicates are always public — they
# only depend on this crate's own types (Conn, Ple, Heyting, …) and
# don't need proptest at all.
proptest = ["dep:proptest"]

# Enable civil-calendar and time-span Conns backed by the `time` crate
# under `connections::time::*`. Host crates own their own `time`
# feature policy (`std`, parsing/formatting, serde adapters, local
# offset support, etc.); this feature only enables the optional
# dependency needed to compile the Conn surface.
time = ["dep:time"]

# Enable IEEE binary16 (`f16`) support: `F016`, `F032F016`, `F064F016`,
# the f16-specific ULP machinery, and the `arb_f16` /
# `extended_float_f16` proptest strategies. Requires nightly Rust
# because `f16` is currently a nightly-only primitive
# (`#![feature(f16)]`, tracking issue #116909). Default stable
# builds skip the f16 path entirely.
f16 = []

# Enable the `hifitime` crate's nanosecond-precision `Duration` and
# `Epoch` Conns under `connections::hifi::*`. Optional because
# hifitime adds ~200 KB compiled and is only useful for
# scientific / aerospace / GNSS time work — the always-on `time`
# crate covers civil-calendar use. We pull hifitime with
# `default-features = false` to keep the dep tree minimal (no
# serde, no web-time, no snafu); downstream crates that want those
# can re-enable the corresponding hifitime features themselves.
hifi = ["dep:hifitime"]

# Enable HLC bridge Conns under `connections::uhlc::*` backed by the
# `uhlc` crate. Pulled with `default-features = false` to skip
# `uhlc`'s default `["std", "serde"]` (which would drag in
# `humantime`, `lazy_static`, `log`, `rand/std`) — the iso Conns
# shipped here only need the bare types.
uhlc = ["dep:uhlc"]

# Re-export the crate's internal codegen macros under
# `connections::macros` for downstream crates building their own
# bounded-integer / Q-format / NonZero / iso lattices on top of
# this crate. Adds no new code (the macros already exist behind
# `#[cfg_attr(feature = "macros", macro_export)]`); just lifts
# their visibility to the crate root. The macro families are
# defined per-domain in `src/conn.rs`, `src/extended.rs`,
# `src/core.rs`, `src/float.rs`, and `src/fixed.rs`.
macros = []

# Implement `core::ops::Try` + `FromResidual` for `Interval`,
# `Extended`, and `ExtendedFloat`, so the `?` operator extracts the
# success payload (`Closed`'s endpoints; `Finite`; `Extend`) and
# short-circuits on the boundary variants (`Empty`; `NegInf` / `PosInf`;
# `Bot` / `Top`), propagating *which* boundary was hit. Requires nightly
# Rust because `try_trait_v2` is currently unstable (tracking issue
# #84277). Default stable builds skip these impls entirely; the inherent
# extractors (`Interval::endpts`, `Extended::finite`, and the `fold`
# family) expose the same information on stable.
try_trait = []

# docs.rs builds on stable rustc by default. We can't use
# `all-features = true` because the `f16` feature activates
# `#![cfg_attr(feature = "f16", feature(f16))]` — a nightly-only
# attribute that errors on stable. Opt into `proptest` and `macros`
# (both stable-rustc-compatible). The `f16`-gated items (`F016`,
# `F032F016`, `F064F016`, `arb_f16`, `extended_float_f16`) won't
# appear in the docs.rs-rendered docs until std `f16` stabilizes.
# The `--cfg docsrs` flag activates the
# `#[cfg_attr(docsrs, doc(cfg(feature = "proptest")))]` mirrors that
# surface the gating in the rendered docs.
[package.metadata.docs.rs]
features = ["fixed", "proptest", "macros", "time", "hifi", "uhlc"]
rustdoc-args = ["--cfg", "docsrs"]

# Declare `cfg(kani)` so `cargo build` / `cargo test` don't warn about
# the SMT-proof harnesses gated on it. Kani sets `--cfg kani` itself
# when running `cargo kani`; this entry just teaches the check-cfg
# lint to expect it.
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(kani)"] }

# The proptest-heavy test binaries are the crate's biggest compile
# units; full debuginfo is what pushes their rustc/link peak past the
# GHA runner's ~7 GB budget (exit-143 kills — see ci.yml's `--jobs 2`
# note, which is no longer sufficient headroom on its own). Line
# tables keep file:line in panic backtraces while shedding most of
# the debuginfo memory.
[profile.test]
debug = "line-tables-only"
