name:                connections
version:             0.1.0
synopsis:            Preorders, Galois connections, and lattices.
description:         A library for numerical conversions using Galois connections.
homepage:            https://github.com/cmk/connections
license:             BSD3
license-file:        LICENSE
author:              Chris McKinlay
maintainer:          chris.mckinlay@gmail.com
category:            Math, Numerical
stability:           Experimental
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall -optc-std=c99
  exposed-modules:

      Data.Connection
    , Data.Connection.Type
    , Data.Connection.Int
    , Data.Connection.Word
    , Data.Connection.Float
    , Data.Connection.Ratio
    , Data.Connection.Property
    , Data.Connection.Quantale

    , Data.Lattice
    , Data.Lattice.Heyting
    , Data.Semigroup.Join

    , Data.Order
    , Data.Order.Property

  build-depends:       
      base           >= 4.10  && < 5.0
    , containers     >= 0.4.0 && < 1.0
    , semigroupoids  >= 5.0   && < 6.0
    , universe-base  >= 1.1.1 && < 2.0
    --, universe-instances-extended >= 1.1.1 && < 2.0
    --, adjunctions    >= 4.4   && < 5.0
    --, finite-typelits >= 0.1.4.2 && < 0.2

  default-extensions:
      ScopedTypeVariables
    , TypeApplications
    , MultiParamTypeClasses
    , UndecidableInstances
    , FlexibleInstances
    , FlexibleContexts
    , TypeOperators

test-suite test
  type: exitcode-stdio-1.0
  other-modules:
      Test.Data.Order
    , Test.Data.Connection
    , Test.Data.Connection.Int
    , Test.Data.Connection.Word
    , Test.Data.Connection.Float
    , Test.Data.Connection.Ratio
  build-depends:       
      base == 4.*
    , connections -any 
    , hedgehog
  default-extensions:
      ScopedTypeVariables,
      TypeApplications
  main-is: test.hs
  hs-source-dirs: test
  default-language: Haskell2010
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
